# media_downloader

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  download_api.py  download_url.sh  pyproject.toml  requirements.txt  test_endpoints.py
.github/workflows/: docker-publish.yml  python-tests.yml
scripts/: download_url.sh
src/: README.md  app.py  config.py  consume_rabbitmq.py  download_api.py  main.py  models.py  plex.py  rabbitmq.py  routes.py  run.py  send_test_message.py  utils.py
tests/: test_app.py  test_config.py  test_routes.py  test_utils.py
